--- a/package.json
+++ b/package.json
@@ -1,29 +1,52 @@
 {
   "name": "skills",
-  "version": "0.1.0",
-  "description": "Internal skills CLI for installing reusable AI agent skills",
+  "version": "1.4.0",
+  "description": "The open agent skills ecosystem",
   "type": "module",
   "bin": {
-    "skills": "./bin/cli.mjs"
+    "skills": "./bin/cli.mjs",
+    "add-skill": "./bin/cli.mjs"
   },
+  "files": [
+    "dist",
+    "bin",
+    "README.md",
+    "ThirdPartyNoticeText.txt"
+  ],
   "scripts": {
-    "build": "tsc",
-    "dev": "tsx src/cli.ts",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "format": "prettier --write 'src/**/*.ts' 'test/**/*.ts'"
+    "build": "tsx scripts/generate-licenses.ts && obuild",
+    "generate-licenses": "tsx scripts/generate-licenses.ts",
+    "dev": "node src/cli.ts",
+    "exec:test": "tsx scripts/execute-tests.ts",
+    "prepublishOnly": "npm run build",
+    "format": "prettier --write 'src/**/*.ts' 'scripts/**/*.ts' 'test/**/*.ts'",
+    "format:check": "prettier --check 'src/**/*.ts' 'scripts/**/*.ts' 'test/**/*.ts'",
+    "prepare": "husky",
+    "test": "vitest",
+    "type-check": "tsc --noEmit"
+  },
+  "lint-staged": {
+    "src/**/*.ts": "prettier --write",
+    "scripts/**/*.ts": "prettier --write",
+    "test/**/*.ts": "prettier --write"
   },
   "engines": {
     "node": ">=18"
   },
-  "dependencies": {
-    "commander": "^13.1.0"
-  },
   "devDependencies": {
+    "@clack/prompts": "^0.11.0",
     "@types/node": "^22.10.0",
-    "prettier": "^3.8.0",
-    "tsx": "^4.19.0",
-    "typescript": "^5.9.0",
-    "vitest": "^4.0.0"
-  }
+    "gray-matter": "^4.0.3",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
+    "obuild": "^0.4.22",
+    "picocolors": "^1.1.1",
+    "prettier": "^3.8.1",
+    "simple-git": "^3.27.0",
+    "tsx": "^4.19.2",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.17",
+    "xdg-basedir": "^5.1.0"
+  },
+  "packageManager": "pnpm@10.17.1"
 }
